--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
 
   <main class="container mt-5">
     <h1>About the Developer</h1>
-    <p>Hello! I'm a passionate web developer and foodie. This site, DelishBites, is a mock project built as part of my Distributed Information Systems course at USF.</p>
+    <p>Hello! I am Aaron Rodrigues, a Graduate student in Artificial Intelligence and Business Analytics, and a passionate web developer and foodie. This site, DelishBites, is a mock project built as part of my Application Development for Analytics course at USF.</p>
 
     <h3>Development Journey</h3>
     <ul>
@@ -37,11 +37,11 @@
 
     <p>This project helped me understand the importance of layout, responsiveness, and user-centric design.</p>
 
-    <p>GitHub Repository: <a href="https://github.com/YOUR_USERNAME/Assignment_LookAndFeel" target="_blank">View Source Code</a></p>
+    <p>GitHub Repository: <a href="https://github.com/aaronaldo0605/Assignment_LookAndFeel" target="_blank">View Source Code</a></p>
   </main>
 
-  <footer class="bg-dark text-white text-center py-3 mt-5">
-    &copy; 2025 DelishBites
+  <footer class="bg-dark text-white text-center py-3" style="position: fixed; width:100%; bottom: 0;">
+    &copy; 2025 DelishBites | Crafted with flavor by Aaron Rodrigues
   </footer>
 </body>
 </html>
