--- a/managerecipes.html
+++ b/managerecipes.html
@@ -69,7 +69,7 @@
   <script src="js/manageRecipes.js"></script>
 
   <footer class="bg-dark text-white text-center py-3 mt-5">
-    &copy; 2025 DelishBites
+    &copy; 2025 DelishBites | Crafted with flavor by Aaron Rodrigues
   </footer>
 </body>
 </html>
