--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   <main class="container mt-5">
     <section class="mb-5">
       <h2>Our Story</h2>
-      <p>Hello! I'm <strong>Aaron Rodrigues</strong>, the founder of DelishBites. My journey with food goes beyond just flavors and recipes — it’s about culture, people, and unforgettable experiences.</p>
-      <p>Over the years, I’ve had the incredible opportunity to travel across <strong>20 countries</strong>, immersing myself in diverse cultures and tasting a wide variety of cuisines. From the spicy street food of Bangkok to the rustic pastas of Rome, each dish I encountered told a story. These experiences ignited a deep passion in me for food and the cultures it represents.</p>
-      <p>DelishBites was born out of this love. It’s a place where stories, flavors, and cultures blend. Whether you’re a home cook, a traveler, or simply a food lover — there’s something here for everyone.</p>
+      <p>Hello! I'm <strong>Aaron Rodrigues</strong>, the founder of DelishBites. My journey with food goes beyond just flavors and recipes. It is about culture, people, and unforgettable experiences.</p>
+      <p>Over the years, I have had the incredible opportunity to travel across <strong>20 countries</strong>, immersing myself in diverse cultures and tasting a wide variety of cuisines. From the spicy street food of Bangkok to the rustic pastas of Rome, each dish I encountered told a story. These experiences ignited a deep passion in me for food and the cultures it represents.</p>
+      <p>DelishBites was born out of this love. It is a place where stories, flavors, and cultures blend. Whether you are a home cook, a traveler, or simply a food lover, there is something here for everyone.</p>
     </section>
 
     <section class="mb-5">
@@ -86,7 +86,7 @@
             <img src="img/ramen.jpg" class="card-img-top" alt="Ramen">
             <div class="card-body">
               <h5 class="card-title">Authentic Japanese Ramen</h5>
-              <p class="card-text">Savory, steamy, and deeply satisfying — a bowl of comfort from Tokyo.</p>
+              <p class="card-text">Savory, steamy, and deeply satisfying bowl of comfort from Tokyo.</p>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
     </section>
 
     <section class="mb-5">
-      <h2>What You’ll Find Here</h2>
+      <h2>What You will Find Here</h2>
       <ul>
         <li>Authentic recipes from around the world</li>
         <li>Interactive tools to manage your favorite dishes</li>
@@ -115,10 +115,10 @@
     <section class="mb-5">
       <h2>What Our Readers Say</h2>
       <div class="testimonial">
-        <p>“DelishBites has inspired me to try dishes I never imagined cooking. Every recipe has a story, and that makes it so much more special.”<br><strong>– Priya Sharma</strong></p>
+        <p>DelishBites has inspired me to try dishes I never imagined cooking. Every recipe has a story, and that makes it so much more special.<br><strong>Priya Sharma</strong></p>
       </div>
       <div class="testimonial">
-        <p>“Aaron’s journey and recipes bring warmth and flavor to my kitchen. This is more than a food blog — it’s a cultural experience.”<br><strong>– Daniel Kim</strong></p>
+        <p>The journey of Aaron and recipes bring warmth and flavor to my kitchen. This is more than a food blog, it is a cultural experience.<br><strong>Daniel Kim</strong></p>
       </div>
     </section>
   </main>
